crates/kirin-derive-core-2/src/kirin/property/snapshots/kirin_derive_core_2__kirin__property__tests__enum_regular.snap
---
source: crates/kirin-derive-core-2/src/kirin/property/mod.rs
expression: content
---
#[automatically_derived]
impl<T> ::kirin::ir::IsConstant for MyEnum<T> {
    fn is_constant(&self) -> bool {
        match self {
            Self::VariantA { a, b } => false || false,
            Self::VariantB(field_0, field_1) => false || true,
        }
    }
}
