crates/kirin-derive-core-2/src/kirin/property/snapshots/kirin_derive_core_2__kirin__property__tests__struct_wrapper.snap
---
source: crates/kirin-derive-core-2/src/kirin/property/mod.rs
expression: content
---
#[automatically_derived]
impl<T> IsConstant for Wrapper<T> {
    fn is_constant(&self) -> bool {
        let Self { inner } = self;
        <InnerStruct<T> as ::kirin::ir::IsConstant>::is_constant(inner)
    }
}
